--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AdamPacanowski/CypressRunner#readme",
   "dependencies": {
+    "glob": "^7.1.7",
     "graph-data-structure": "^2.0.0",
     "graphviz-cli": "^1.0.0"
   }
