--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "generate-graph": "node generateGraph.js",
+    "generate-graph": "node generateGraph.js"
   },
   "repository": {
     "type": "git",
