--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "10.0.0",
     "glob": "7.1.7",
     "graph-data-structure": "2.0.0",
-    "graphviz-cli": "1.0.0"
+    "graphviz-cli": "1.0.0",
+    "lodash": "^4.17.21"
   }
 }
