--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "generate-graph": "node generateGraph.js"
+    "build": ".\\node_modules\\.bin\\tsc"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "glob": "7.1.7",
     "graph-data-structure": "2.0.0",
     "graphviz-cli": "1.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "4.17.21"    
+  },
+  "devDependencies": {
+    "typescript": "4.3.5"
   }
 }
