--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "lodash": "4.17.21"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.4",
+    "@types/lodash": "^4.14.171",
     "@types/node": "^16.4.7",
+    "cypress": "^8.1.0",
     "typescript": "4.3.5"
   }
 }
