--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./built",
     "allowJs": true,
+    "esModuleInterop": true,
     "moduleResolution": "node"
   },
   "include": ["./src/**/*"],
