--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "glob": "7.1.7",
     "graph-data-structure": "2.0.0",
     "graphviz-cli": "1.0.0",
-    "lodash": "4.17.21"
+    "lodash": "4.17.21",
+    "yargs": "^17.1.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
