--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/AdamPacanowski/CypressRunner#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "dotenv": "10.0.0",
     "glob": "7.1.7",
     "graph-data-structure": "2.0.0",
