--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "tests"
   },
   "scripts": {
-    "build": ".\\node_modules\\.bin\\tsc"
+    "postinstall": "node fixTypes.js",
+    "build": ".\\node_modules\\.bin\\tsc",
+    "test": ".\\node_modules\\.bin\\jest"
   },
   "repository": {
     "type": "git",
@@ -29,9 +31,12 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
+    "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.171",
     "@types/node": "^16.4.7",
     "cypress": "^8.1.0",
+    "jest": "27.1.0",
+    "rimraf": "3.0.2",
     "typescript": "4.3.5"
   }
 }
