Add configReader.getAllFileNames method test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"]
 }
