--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "postinstall": "node fixTypes.js",
     "build": ".\\node_modules\\.bin\\tsc",
-    "test": ".\\node_modules\\.bin\\jest"
+    "test": ".\\node_modules\\.bin\\jest",
+    "watch": ".\\node_modules\\.bin\\tsc --watch"
   },
   "repository": {
     "type": "git",
