--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cypress": "^8.1.0",
     "jest": "27.1.0",
     "rimraf": "3.0.2",
+    "ts-jest": "^27.0.5",
     "typescript": "4.3.5"
   }
 }
