--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cypress-dependencies-runner",
   "version": "0.5.0",
   "description": "",
+  "bin": {
+    "cypress-runner": "./src/cli"
+  },
   "directories": {
     "test": "tests"
   },
