--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "",
   "bin": {
-    "cypress-runner": "./src/cli"
+    "cypress-runner": "./built/cli.js"
   },
   "directories": {
     "test": "tests"
@@ -31,7 +31,7 @@
     "graph-data-structure": "2.0.0",
     "graphviz-cli": "1.0.0",
     "lodash": "4.17.21",
-    "yargs": "17.2.0"
+    "yargs": "^17.2.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
