--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.171",
     "@types/node": "^16.4.7",
-    "cypress": "^8.1.0",
+    "cypress": "8.6.0",
     "jest": "27.1.0",
     "rimraf": "3.0.2",
     "ts-jest": "^27.0.5",
