--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: Run `npm install`
         run: npm install
         
-      - name: 'Pwd'
-        run: 'pwd'
+      - name: 'Build files'
+        run: npm run build
 
       # Runs Jest tests
       - name: Run Jest tests
