--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "postinstall": "node fixTypes.js",
-    "build": ".\\node_modules\\.bin\\tsc",
+    "clean": ".\\node_modules\\.bin\\rimraf built",
+    "build": "npm run clean && .\\node_modules\\.bin\\tsc",
     "test": ".\\node_modules\\.bin\\jest",
-    "watch": ".\\node_modules\\.bin\\tsc --watch"
+    "watch": "npm run clean && .\\node_modules\\.bin\\tsc --watch"
   },
   "repository": {
     "type": "git",
