--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "postinstall": "node fixTypes.js",
     "clean": ".\\node_modules\\.bin\\rimraf built",
-    "build": "npm run clean && .\\node_modules\\.bin\\tsc",
+    "build:only": ".\\node_modules\\.bin\\tsc",
+    "build": "npm-run-all -s clean build:only",
     "test": ".\\node_modules\\.bin\\jest",
-    "watch": "npm run clean && .\\node_modules\\.bin\\tsc --watch"
+    "watch:only": ".\\node_modules\\.bin\\tsc --watch",
+    "watch": "npm-run-all -s clean watch:only"
   },
   "repository": {
     "type": "git",
@@ -32,14 +34,15 @@
     "yargs": "17.2.0"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.4",
-    "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^16.4.7",
-    "cypress": "^8.1.0",
+    "@types/glob": "7.2.0",
+    "@types/jest": "27.0.2",
+    "@types/lodash": "4.14.176",
+    "@types/node": "16.11.6",
+    "cypress": "8.1.0",
     "jest": "27.1.0",
+    "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "27.0.7",
     "typescript": "4.3.5"
   }
 }
