Basic action updated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,6 @@ jobs:
       # Runs Jest tests
       - name: Run Jest tests
         run: npm test
+
+      - name: Run E2E tests
+        run: cd scripts; node rune2etests.mjs
