--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build": "npm-run-all -s clean build:only",
     "test": ".\\node_modules\\.bin\\jest",
     "watch:only": ".\\node_modules\\.bin\\tsc --watch",
-    "watch": "npm-run-all -s clean watch:only"
+    "watch": "npm-run-all -s clean watch:only",
+    "lint": ".\\node_modules\\.bin\\eslint . --ext .ts",
+    "lint:fix": ".\\node_modules\\.bin\\eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -41,7 +43,10 @@
     "@types/jest": "27.0.2",
     "@types/lodash": "4.14.176",
     "@types/node": "16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "cypress": "8.6.0",
+    "eslint": "^8.4.0",
     "jest": "27.1.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
