--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "cypress": "8.6.0",
     "eslint": "^8.4.0",
+    "eslint-plugin-import": "^2.25.3",
     "jest": "27.1.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
