--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build:only": ".\\node_modules\\.bin\\tsc",
     "build": "npm-run-all -s clean build:only",
     "test": ".\\node_modules\\.bin\\jest",
+    "test:coverage": ".\\node_modules\\.bin\\jest --collectCoverage",
+    "test:coverage:open": "start .\\coverage\\lcov-report\\src\\index.html",
+    "test:coverage:full": "npm run test:coverage && npm run test:coverage:open",
     "watch:only": ".\\node_modules\\.bin\\tsc --watch",
     "watch": "npm-run-all -s clean watch:only",
     "lint": ".\\node_modules\\.bin\\eslint . --ext .ts",
