--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-import": "^2.25.3",
     "jest": "27.1.0",
     "npm-run-all": "4.1.5",
+    "plop": "^3.0.5",
     "rimraf": "3.0.2",
     "ts-jest": "27.0.7",
     "typescript": "4.3.5"
