Add missing fixture generating trigger

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "postinstall": "node fixTypes.js",
     "clean": ".\\node_modules\\.bin\\rimraf built",
     "build:only": ".\\node_modules\\.bin\\tsc",
-    "build": "npm-run-all -s clean build:only",
+    "build": "npm-run-all -s prepareTestFixtures clean build:only",
+    "prepareTestFixtures": "node scripts\\prepareTestFixtures.mjs",
     "test": ".\\node_modules\\.bin\\jest",
     "test:coverage": ".\\node_modules\\.bin\\jest --collectCoverage",
     "test:coverage:open": "start .\\coverage\\lcov-report\\src\\index.html",
     "test:coverage:full": "npm run test:coverage && npm run test:coverage:open",
     "watch:only": ".\\node_modules\\.bin\\tsc --watch",
-    "watch": "npm-run-all -s clean watch:only",
+    "watch": "npm-run-all -s prepareTestFixtures clean watch:only",
     "lint": ".\\node_modules\\.bin\\eslint . --ext .ts",
     "lint:fix": ".\\node_modules\\.bin\\eslint . --ext .ts --fix"
   },
